fix overflow cutoff on zoom desktop

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -9,7 +9,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     margin: 0;
 }
 
